--- a/baloochat/src/Components/ChatBody/ChatBody.module.css
+++ b/baloochat/src/Components/ChatBody/ChatBody.module.css
@@ -4,7 +4,7 @@
     border-top-left-radius: 24px;
 }
 .chatMain{
-    padding: 24px;
+    padding: 24px 24px 0px 24px;
     display: flex;
 }
 .topImage{
@@ -48,7 +48,7 @@
 .notification{
     background-color: #000000;
     font-size: 12px;
-    width: 18px;
+    min-width: 18px;
     color: #FFFFFF;
     border-radius: 50%;
     margin:0 auto
