--- a/baloochat/src/Components/ChatBody/ChatBody.module.css
+++ b/baloochat/src/Components/ChatBody/ChatBody.module.css
@@ -50,8 +50,11 @@
 .notification{
     background-color: #000000;
     font-size: 12px;
-    min-width: 18px;
+    width: 14px;
+    height: 14px;
     color: #FFFFFF;
     border-radius: 50%;
-    margin:0 auto
+    margin:0 auto;
+    padding:2px;
+    align-items: center;
 }
