--- a/baloochat/src/Components/ChatBody/ChatBody.module.css
+++ b/baloochat/src/Components/ChatBody/ChatBody.module.css
@@ -50,11 +50,10 @@
 .notification{
     background-color: #000000;
     font-size: 12px;
-    width: 14px;
-    height: 14px;
+    width: 18px;
+    height: 18px;
     color: #FFFFFF;
     border-radius: 50%;
     margin:0 auto;
-    padding:2px;
-    align-items: center;
+    line-height: 18px;
 }
